--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
                 <kbd>J</kbd>
                 <span class="sound">SNARE</span>
             </div>
-            <div data-key="84" class="key">
-                <kbd>k</kbd>
+            <div data-key="75" class="key">
+                <kbd>K</kbd>
                 <span class="sound">TOM</span>
             </div>
             <div data-key="76" class="key">
@@ -52,8 +52,32 @@
         <audio data-key="71" src="./sounds/boom.wav"></audio>
         <audio data-key="72" src="./sounds/ride.wav"></audio>
         <audio data-key="74" src="./sounds/snare.wav"></audio>
-        <audio data-key="84" src="./sounds/tom.wav"></audio>
+        <audio data-key="75" src="./sounds/tom.wav"></audio>
         <audio data-key="76" src="./sounds/tink.wav"></audio>
     </body>
+    <script>
     
+        function playSound(e) {
+            const audio = document.querySelector(`audio[data-key="${e.keyCode}"]`)
+            const key = document.querySelector(`.key[data-key="${e.keyCode}"]`)
+
+            if(!audio) return;
+
+            audio.currentTime = 0;
+            audio.play();
+
+            key.classList.add('playing');
+        }
+
+        function removeTransition(e) {
+            if(e.propertyName !== 'transform') return;
+
+            this.classList.remove('playing');
+        }
+
+        const keys = document.querySelectorAll('.key')
+        keys.forEach(key => key.addEventListener('transitionend', removeTransition))
+        window.addEventListener('keydown', playSound);
+
+    </script>
 </html>
